--- a/aggregator/templates/articles/list_by_category.html
+++ b/aggregator/templates/articles/list_by_category.html
@@ -4,15 +4,12 @@
 <h3>Категория - {{category_obj.name}}</h3>
 <div class="container">
 {% for article in object_list %}
-    <div class="card">
+    <div class="card" style="background-color: {{article.color}}">
         <a href="{% url 'article_view' article.id%}">
             <div class="card-header">
               <img src="{% if article.image != ' ' %} {{article.image}} {% else %} {% static '/images/no_image_preview.jpg' %} {% endif %}" alt="rover" />
             </div>
             <div class="card-body">
-                {%for category in article.category.all%}
-                        <a class="tag tag-teal" href="{% url 'article_list_by_category' category.id %}">{{category.name}}</a>
-                {%endfor%}
               <h4>{{article.title}}</h4>
               <p>{{article.description}}</p>
               <div class="user">
