--- a/aggregator/templates/articles/list_by_domain.html
+++ b/aggregator/templates/articles/list_by_domain.html
@@ -4,7 +4,7 @@
 <h3>{{domain_obj.name}}</h3>
 <p><em>{{domain_obj.description}}</em></p>
 {% for article in object_list %}
-    <div class="card">
+    <div class="card" style="background-color: {{article.color}}">
         <a href="{% url 'article_view' article.id%}">
             <div class="card-header">
               <img src="{% if article.image != ' ' %} {{article.image}} {% else %} {% static '/images/no_image_preview.jpg' %} {% endif %}" alt="rover" />
