--- a/article_aggregator/static/css/main.css
+++ b/article_aggregator/static/css/main.css
@@ -522,3 +522,12 @@ a.profile-list-item-content{
   width: 100%;  
   text-decoration: none;
 }
+
+.Disabled{
+  pointer-events: none;
+  cursor: not-allowed;
+  opacity: 0.65;
+  filter: alpha(opacity=65);
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
