--- a/aggregator/templates/articles/list_search.html
+++ b/aggregator/templates/articles/list_search.html
@@ -4,7 +4,7 @@
 <h3>{{domain_obj.name}}</h3>
 <p><em>{{domain_obj.description}}</em></p>
 {% for article in object_list %}
-    <div class="card">
+    <div class="card" style="background-color: {{article.color}}">
         <a href="{% url 'article_view' article.id%}">
             <div class="card-header">
               <img src="{% if article.image != ' ' %} {{article.image}} {% else %} {% static '/images/no_image_preview.jpg' %} {% endif %}" alt="rover" />
@@ -17,6 +17,7 @@
                 <p>{{article.description}}</p>
                 <div class="user">
                   <div class="user-info">
+                      <a href="{% url 'article_list_by_domain' article.domain.id %}"><h5>{{article.domain.name}}</h5></a>
                       <a href="{% url 'article_list_by_author' article.author.id %}"><h6>Автор - {{article.author.name}}</h6></a>
                       <a href="{% url 'article_list_by_date' article.date|date:"d-m-Y" %}"><small>{{article.date}}</small></a>
                   </div>
